[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Pistol/handgun.fbx" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.5

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.145098, 0.976471, 0.333333, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 4.20559, 2.51308, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.861191, 0 )

[node name="Camera" type="Camera" parent="Head"]
fov = 60.0

[node name="handgun" parent="Head" instance=ExtResource( 2 )]
transform = Transform( 0.00192846, 0, -0.0999814, 0, 0.1, 0, 0.0999814, 0, 0.00192846, 0.746, -0.452, -1.441 )

[node name="FirePoint" type="Position3D" parent="Head/handgun"]
transform = Transform( 0.192846, 0, 9.99814, 0, 10, 0, -9.99814, 0, 0.192846, -6.41858, 1.91268, 0.246658 )

[node name="CPUParticles" type="CPUParticles" parent="Head/handgun/FirePoint"]
emitting = false
amount = 200
lifetime = 0.05
one_shot = true
mesh = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3( 0, 0, -1 )
spread = 125.68
gravity = Vector3( 0, 0, -20 )
initial_velocity = 1.0
color = Color( 0.984314, 0.0745098, 0.0745098, 1 )

[node name="GunTimer" type="Timer" parent="Head/handgun"]
wait_time = 0.25

[node name="KinematicBody" type="KinematicBody" parent="Head/handgun"]

[node name="CollisionShape" type="CollisionShape" parent="Head/handgun/KinematicBody"]
transform = Transform( 1, 0, 1.86265e-09, 0, 1, 0, -1.86265e-09, 0, 1, 0, 0, 0 )
shape = SubResource( 5 )
[connection signal="timeout" from="Head/handgun/GunTimer" to="." method="_on_GunTimer_timeout"]
